--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,16 +11,23 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/rte": "^5.10.5",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.3",
+    "draft-js": "^0.11.7",
     "firebase": "^11.6.0",
     "flowbite-react": "^0.11.7",
+    "global": "^4.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "redux-persist": "^6.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
